# Reconhecimento_Facial

./: .env  .env.example  .gitignore  Dockerfile  README.md  app.py  db.py  emotion_detection.py  face_detection.py  llm_service.py  obstruction_detection.py  pyproject.toml  recognition.py  requirements.txt  web_app.py
Estrutura_SQL/: schema.sql
examples/: README.md
reconhecimento_facial/: __init__.py  app.py  db.py  deepface_integration.py  demographics_detection.py  device.py  face_detection.py  google_search.py  llm_service.py  obstruction_detection.py  preload.py  recognition.py  social_search.py  web_app.py  whisper_translation.py
reconhecimento_facial/facexformer/: __init__.py  inference.py
reconhecimento_facial/facexformer/models/: transformer.py
reconhecimento_facial/templates/: base.html  caption.html  demographics.html  detect.html  detections.html  index.html  obstruction.html  people.html  preload.html  recognize.html  register.html  register_webcam.html  translate.html  translate_live.html  webcam.html
tests/: test_caption.py  test_demographics.py  test_detect.py  test_google_search.py  test_obstruction.py  test_people.py  test_recognition_google.py  test_recognition_social.py  test_register.py  test_social_search.py  test_translation.py  test_web_app.py
